Ingress/tomcat-ingress-deploy.yml
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: tomcat-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: tomcat.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tomcat-service
            port:
              number: 8080
  
---
# apiVersion: ""
# kind: Service
# metadata:
#   name: nodeport-service
#   namespace: ingress-nginx
# spec: 
#   type: NodePort
#   ports: 
#   - name: http
#     port: 8080
#     targetPort: 8080
#     nodePort: 8080
#     protocol: TCP
#   selector: 
    
    


# ---
apiVersion: "v1"
kind: Service
metadata:
  name: tomcat-service
spec: 
  type: ClusterIP  #ExternalName外部服务引入集群, ClusterIP仅用于集群内部通讯, NodePort接入集群外部流量, LoadBalancer接入云负载均衡器
  clusterIP: None #集群内访问地址,可以不指定，可以为Nobe或""时，为hardless服务，无头service,无头service直接走ingress代理，不走service redis.defaut.svc.cluster.local.
  selector: 
    app: tomcat
  ports:
  - name: http
    targetPort: 8080
    port: 8080



---
apiVersion: "apps/v1"
kind: Deployment
metadata: 
  name: tomcat-deployment
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  strategy: 
    type: "RollingUpdate"  #更新类型：滚动更新
    rollingUpdate:
      maxSurge: 1 #和期望ready的副本数比，超过期望副本数最大比例（或最大值），这个值调的越大，副本更新速度越快。
      maxUnavailable: 0 #和期望ready的副本数比，不可用副本数最大比例（或最大值），这个值越小，越能保证服务稳定，更新越平滑；
  revisionHistoryLimit: 10 #最多保存历史版本数，用于回滚
  template: 
    metadata: 
      name: tomcat-pod
      labels:
        app: tomcat
    spec: 
      nodeName: k8s.node2
      containers: 
      - name: tomcat-container
        image: tomcat:8.5-jre10-slim
        ports:
        - name: http
          containerPort: 8080
---
